# Piper-Master-Trainer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  install.sh  test_gpu.sh
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  audio_file.py  checkpoint.py  dataset.py  exported_model.py  project.py  segment.py  training_run.py
backend/app/routers/: datasets.py  models.py  projects.py  training.py  transcription.py  ws.py  youtube.py
backend/app/schemas/: common.py  dataset.py  project.py  synthesis.py  training.py  transcription.py  youtube.py
backend/app/services/: audio_file_service.py  dataset_service.py  export_service.py  gpu_manager.py  pretrained_catalog.py  project_service.py  segment_service.py  synthesis_service.py  training_service.py  transcription_service.py  youtube_service.py
backend/app/tasks/: __init__.py  dataset_tasks.py  export_tasks.py  training_tasks.py  transcription_tasks.py  youtube_tasks.py
backend/app/utils/: chrome_cookies.py  piper_bridge.py  piper_train_entry.py  progress.py  train_runner.py  training_callback.py  websocket_manager.py
backend/tests/: conftest.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  datasets.ts  models.ts  projects.ts  system.ts  training.ts  transcription.ts  youtube.ts
frontend/src/hooks/: useGpuStatus.ts  usePolling.ts
(+25 files in other folders)
